Fix overflow or left nav #360

--- a/packages/react-cosmos-component-playground/src/components/ComponentPlayground/index.less
+++ b/packages/react-cosmos-component-playground/src/components/ComponentPlayground/index.less
@@ -36,6 +36,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .header {
